[package]
edition = "2024"
name = "civicalert-cloud"
version = "1.0.0"
authors = ["Will Hedgecock <will.hedgecock@hedgetech.net>"]
license = "MIT"
description = "CivicAlert sensor fusion cloud application"
readme = "README.md"
homepage = "https://github.com/vu-civic/cloud"
repository = "https://github.com/vu-civic/cloud"
keywords = ["civicalert", "agl", "gsl", "civic", "gunshot"]
categories = ["mathematics", "multimedia::audio", "science"]
publish = false

[dependencies]
aws-config = { version = "1", default-featurees = false, features = ["behavior-version-latest"] }
aws-credential-types = { version = "1", default-featurees = false }
aws-sdk-dynamodb = { version = "1", default-featurees = false }
aws-sdk-s3 = { version = "1", default-featurees = false }
aws-sdk-secretsmanager = { version = "1", default-featurees = false }
aws-sdk-ssm = { version = "1", default-featurees = false }
rumqttc = { version = "0.24", default-featurees = false }
serde_json = { version = "1.0", default-featurees = false }
tokio = { version = "1", default-featurees = false, features = ["io-util", "parking_lot", "rt-multi-thread", "signal", "tokio-macros"] }
tracing = { version = "0.1", default-featurees = false }
tracing-appender = { version = "0.2", default-featurees = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "fmt", "registry"] }

[features]
default = []

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
panic = "abort"
rpath = false
strip = "symbols"
