[workspace]
members = ["common", "cloud", "evidence"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "1.0.0"
authors = ["Will Hedgecock <will.hedgecock@hedgetech.net>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/vu-civic/cloud"
repository = "https://github.com/vu-civic/cloud"
documentation = "https://github.com/vu-civic/cloud"
keywords = ["civicalert", "agl", "gsl", "civic", "gunshot"]
categories = ["mathematics", "multimedia::audio", "science"]
publish = false

[workspace.dependencies]
civiclaert-cloud = { path = "cloud", version = "1.0.0" }
civicalert-cloud-common = { path = "common", version = "1.0.0" }
civicalert-evidence = { path = "evidence", version = "1.0.0" }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1" }
aws-sdk-dynamodb = { version = "1" }
aws-sdk-s3 = { version = "1" }
aws-sdk-secretsmanager = { version = "1" }
aws-sdk-ssm = { version = "1" }
aws-sdk-sqs = { version = "1" }
bytes = { version = "1" }
ctrlc = { version = "3.4", features = ["termination"] }
rumqttc = { version = "0.24", default-features = false, features=["use-rustls"] }
serde_json = { version = "1.0", default-features = false, features=["std"] }
tokio = { version = "1", default-features = false, features = ["io-util", "parking_lot", "rt-multi-thread", "tokio-macros"] }
tracing = { version = "0.1", default-features = false }
tracing-appender = { version = "0.2", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "fmt", "registry"] }

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
panic = "abort"
rpath = false
strip = "symbols"
