[package]
edition.workspace = true
name = "civicalert-cloud"
version.workspace = true
authors.workspace = true
license.workspace = true
description = "CivicAlert sensor fusion cloud application"
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
aws-config = { workspace = true }
aws-credential-types = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-secretsmanager = { workspace = true }
aws-sdk-ssm = { workspace = true }
rumqttc = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = []
