[package]
edition.workspace = true
name = "civicalert-cloud"
version.workspace = true
authors.workspace = true
license.workspace = true
description = "CivicAlert sensor fusion cloud application"
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
civicalert-cloud-common.workspace = true
ctrlc.workspace = true
rumqttc.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true

[features]
default = []
