[package]
edition.workspace = true
name = "civicalert-evidence"
version.workspace = true
authors.workspace = true
license.workspace = true
description = "CivicAlert audio evidence clip parser and reconstruction application"
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
bytes.workspace = true
civicalert-cloud-common.workspace = true
ctrlc.workspace = true
dashmap = { version = "6.1" }
rumqttc.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true

[features]
default = []
